Agri_all.csv 파일을 깃에 업로드합니다.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 gitig*
-data
 reference
 auth.py
 .DS_Store
 desktop.ini
+*.csv
+*.xlsx
+data/*
+!data/Agri_all.csv
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
